# dang

./: .gitignore  .gitmodules  AST.hs  Compile.hs  Error.hs  Interface.hs  LICENSE  LLVM.hs  LambdaLift.hs  Main.hs  Makefile  Pretty.hs  README  README.md  Rename.hs  TODO.md  build.sh  dang.cabal  dang.mk  setup.sh  stack.yaml
dang/: Main.hs
doc/: ModuleSystem.md
examples/: Fix.dg  Id.dg  Main.dg  Makefile  Set.dg  simple.dg
frontend/: Main.hs
lib/: Prelude.dg
mk/: build.mk  clean.mk  defaults.mk  print.mk  verbose.mk
rts/: Makefile  apply.ll.S  gc-prim.ll  gc.c  gc.cxx  gc.h  prim.cxx  rts-main.c  rts-main.cxx  rts.c  rts.cxx  rts.h  types.h
src/: AST.hs  CodeGen.hs  Colors.hs  Compile.hs  Dang.hs  Defun.hs  Desugar.hs  Error.hs  Interface.hs  Interface2.hs  LambdaLift.hs  Link.hs  Main.hs  ModuleSystem.hs  Pretty.hs  Prim.hs  QualName.hs  QualNameMap.hs  ReadWrite.hs  Rename.hs  Syntax.hs  Traversal.hs  TypeChecker.hs  Utils.hs  Variables.hs  dang.mk
src/CodeGen/: Core.hs  Env.hs  PrimOps.hs  Rts.hs  Types.hs
src/Compile/: LambdaLift.hs  Rename.hs
src/Core/: AST.hs  Interface.hs
src/Dang/: AST.hs  CodeGen.hs  Colors.hs  Compile.hs  Desugar.hs  FileName.hs  IO.hs  Link.hs  Message.hs  ModuleSystem.hs  Monad.hs  Options.hs  Pretty.hs  Prim.hs  QualName.hs  ReadWrite.hs  Syntax.hs  Tool.hs  Traversal.hs  TypeChecker.hs  Unique.hs  Utils.hs  Variables.hs
src/Dang/CodeGen/: Core.hs  Env.hs  Rts.hs  Types.hs
src/Dang/Compile/: LambdaLift.hs  Rename.hs
src/Dang/Core/: AST.hs  Interface.hs
src/Dang/ModuleSystem/: Env.hs  Export.hs  Imports.hs  Interface.hs  Name.hs  QualName.hs  Rename.hs  Resolve.hs  ScopeCheck.hs  Types.hs
src/Dang/Syntax/: .gitignore  AST.hs  Ann.hs  Format.hs  Layout.hs  Lexeme.hs  Lexer.x  Location.hs  Parser.y  ParserCore.hs  Quote.hs  Renumber.hs  Signatures.hs
src/Dang/TypeCheck/: AST.hs  Env.hs  KindCheck.hs  Monad.hs  Subst.hs
src/Dang/TypeChecker/: CheckKinds.hs  CheckTypes.hs  Env.hs  Monad.hs  Quote.hs  Subst.hs  Types.hs  Unify.hs  Vars.hs
src/Dang/Utils/: Ident.hs  Location.hs  PP.hs  Panic.hs  Pretty.hs
src/Data/: ClashMap.hs
src/ModuleSystem/: Export.hs  Imports.hs  Interface.hs  Resolve.hs  ScopeCheck.hs  Types.hs
src/Parser/: Lexer.x  Parser.y  ParserCore.hs
src/Syntax/: .gitignore  AST.hs  Layout.hs  Lexeme.hs  Lexer.x  Parser.y  ParserCore.hs  Quote.hs  Renumber.hs
src/TypeChecker/: AST.hs  Assume.hs  CheckKinds.hs  CheckTypes.hs  Env.hs  Monad.hs  Quote.hs  Types.hs  Unify.hs  Vars.hs
tests/: Main.hs  Tests.hs
tests/Tests/: Monadic.hs  QualName.hs  Types.hs  Unification.hs  Utils.hs
