name:                dang
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
copyright:           2015
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Dang
                       Dang.Message
                       Dang.ModuleSystem.Env
                       Dang.ModuleSystem.Name
                       Dang.ModuleSystem.Rename
                       Dang.Monad
                       Dang.Syntax.AST
                       Dang.Syntax.Format
                       Dang.Syntax.Layout
                       Dang.Syntax.Lexer
                       Dang.Syntax.Location
                       Dang.Syntax.Parser
                       Dang.Unique
                       Dang.Utils.Ident
                       Dang.Utils.Panic
                       Dang.Utils.PP
  build-depends:       base >= 4.8 && <5,
                       array,
                       ansi-terminal,
                       monadLib,
                       pretty >= 1.1.3.2,
                       containers,
                       lens,
                       text,
                       terminal-size
  ghc-options:         -Wall

executable dang
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5,
                       containers,
                       text,
                       dang
  hs-source-dirs:      dang
  default-language:    Haskell2010
  ghc-options:         -Wall
